# AI08

./: README.md
01_Prototyping Best Practices & Vibe Check/: README.md
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb
02_Embeddings_and_RAG/aimakerspace/: text_utils.py  vectordatabase.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  Ollama_Setup_and_Testing.ipynb  langgraph.json  my_graph.py  pyproject.toml
04_Production_RAG/.langgraph_api/: .langgraph_checkpoint.1.pckl.tmp  .langgraph_checkpoint.2.pckl.tmp  .langgraph_checkpoint.3.pckl.tmp  .langgraph_ops.pckl
04_Production_RAG/04_producton_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  pyproject.toml
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  Nave_Retrieval_RAGAS_Chunking_evaluation_and_comparison.ipynb  pyproject.toml
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml
10_Open_DeepResearch/: open-deep-research.ipynb  pyproject.toml
14_LangGraph_Platform/: README.md  langgraph.json  pyproject.toml  test_mcp_integration.py  test_response.txt  test_simple_mcp.py
15_A2A_LangGraph/: README.md  example_client_agent.py
(+81 files in other folders)
